tests/dependancies/bad/no_main/main.rs


fn incr3(x : &mut usize) {
    *x = *x + 3
}